--- a/Scripts/JavaScript/maratona-discover-2/src/views/index.ejs
+++ b/Scripts/JavaScript/maratona-discover-2/src/views/index.ejs
@@ -76,38 +76,42 @@
         <h1 class="sr-only">Trabalhos</h1>
 
         <div class="cards">
-          <div class="card progress" data-id="1">
-            <div class="id column">1</div>
-            <div class="name column">
-              Pizzaria Guloso
+
+          <% jobs.forEach(job => { %>
+            
+            <div class="card <%= job.status %> " data-id="<%= job.id %> ">
+              <div class="id column"><%= job.id %> </div>
+              <div class="name column">
+                <%= job.name %> 
+              </div>
+              <div class="deadline column">
+                <span>Prazo</span>
+                <p><%= job.remaining === 0 ? "Prazo encerrado" : job.remaining + " dias para a entrega" %></p>
+              </div>
+              <div class="amount column">
+                <span>Valor</span>
+                <p>R$ <%= job.budget.toFixed(2).replace('.', ',') %> </p>
+              </div>
+              <div class="status badge column">
+                <%= job.status === 'done' ? 'encerrado' : 'Em andamento' %> 
+              </div>
+              <div class="actions column flex">
+                <p class="sr-only">Ações</p>
+                <a 
+                  href="/job/<%= job.id %> " 
+                  class="button white edit" 
+                  title="Editar Job">
+                  <img src="/images/edit-24.svg" alt="Editar Job" />
+                </a>
+                <button class="delete button white" title="Excluir Job">
+                  <img src="/images/trash-24.svg" alt="Excluir Job" />
+                </button>
+              </div>
             </div>
-            <div class="deadline column">
-              <span>Prazo</span>
-              <p>3 dias para a entrega</p>
-            </div>
-            <div class="amount column">
-              <span>Valor</span>
-              <p>R$ 4500,00</p>
-            </div>
-            <div class="status badge column">
-              Em andamento
-            </div>
-            <div class="actions column flex">
-              <p class="sr-only">Ações</p>
-              <a 
-                href="/job-edit" 
-                class="button white edit" 
-                title="Editar Job">
-                <img src="/images/edit-24.svg" alt="Editar Job" />
-              </a>
-              <button class="delete button white" title="Excluir Job">
-                <img src="/images/trash-24.svg" alt="Excluir Job" />
-              </button>
-            </div>
-          </div>
+          <% }) %>
           <!-- end card -->
 
-          <div class="card done" data-id="2">
+          <!-- <div class="card done" data-id="2">
             <div class="id column">2</div>
             <div class="name column">
               OneTwo Project
@@ -135,7 +139,7 @@
                 <img src="/images/trash-24.svg" alt="Excluir Job" />
               </button>
             </div>
-          </div>
+          </div> -->
         </div>
         <!-- end cards -->
       </main>
@@ -148,7 +152,7 @@
         <h3>Excluir Job</h3>
         <p>Quer mesmo excluir esse job? <br/>
         Ele será apagado para sempre.  
-        <p>
+        </p>
         <footer>
           <a 
             class="button gray" 
